Modify sbt option