@@ -43,4 +43,6 @@ export XDG_CONFIG_HOME=$HOME/.config
 #--------------------------------
 export SBT_OPTS=" \
 -Dfile.encoding=UTF-8 \
+-XX:+CMSClassUnloadingEnabled \
+-XX:MaxPermSize=256M
 "
